# uv-tensorrt-groupdep-issue-mre

./: hello.py  linux-cpu.Dockerfile  linux-gpu.Dockerfile  pyproject.toml
